name: sexp
version: 0.0.1
synopsis: Examples of parsing s-expression in parser combinators
description: Examples of parsing s-expression in parser combinators
author: Pasberth
maintainer: Pasberth <pasberth@gmail.com>
copyright: Copyright (C) 2013 Pasberth
build-type: Simple
stability: experimental
cabal-version: >=1.10

Executable sexp-parsec
  Build-Depends:
    base==4.6.0.1,
    mtl==2.1.2,
    parsec==3.1.3

  ghc-options: -Wall -O2

  Main-Is:        sexp-parsec.hs
  Hs-Source-Dirs: .

Executable sexp-attoparsec
  Build-Depends:
    base==4.6.0.1,
    mtl==2.1.2,
    bytestring==0.10.0.2,
    attoparsec==0.10.4.0

  ghc-options: -Wall -O2

  Main-Is:        sexp-attoparsec.hs
  Hs-Source-Dirs: .

Executable sexp-trifecta
  Build-Depends:
    base==4.6.0.1,
    mtl==2.1.2,
    trifecta==1.2.1.1

  ghc-options: -Wall -O2

  Main-Is:        sexp-trifecta.hs
  Hs-Source-Dirs: .

Executable sexp-trifecta-applicative
  Build-Depends:
    base==4.6.0.1,
    mtl==2.1.2,
    trifecta==1.2.1.1

  ghc-options: -Wall -O2

  Main-Is:        sexp-trifecta-applicative.hs
  Hs-Source-Dirs: .
